add jvm